--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-geocode": "^0.2.1",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.1.4",
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-geocode": "^0.2.3",
+    "react-google-autocomplete": "^2.7.1",
     "react-google-maps": "^9.4.5",
     "react-icons": "^4.7.1",
     "react-leaflet": "^4.2.0",
